# test-action

./: LICENSE  README.md  build_python_rpi.py  install_openssl.sh  pyproject.toml  python_links.json  rpi_cpuinfo  script_err.py  script_ok.py
.github/workflows/: auto_commit.yaml  matrix_os_print.yaml  matrix_print.yaml  poetry_action.yaml  rpi_build.yaml  rpi_build_use.yaml  rpi_cargo.yaml  rpi_poetry.yaml  rpi_use.yaml  script_err.yaml  script_ok.yaml  script_warn.yaml  string_manip.yaml
